0.8.0 - currently working on
- [#3782] Fix: Typo in tca.php
- [#3772] Feature: Add country to the FE user model
- [#2682] Feature: Implement dataMapper::delete
- [#3728] Change: Drop functions that have been announced to be removed in oelib 0.8.0
- [#3768] Fix: Relations to FE user groups with the UID 0 should be ignored
- [#3741] Fix: PID in page type error message displayed as "Array"
- [#3710] Change: Use self:: for static calls within the same class
- [#3734] Fix: List::getUids and ::hasUid need to react to changes
- [#3729] Change: Provide ext_autoload for our extensions

0.7.0 - released 2010-02-23
- [#3701] Feature: Add Model::markAsVisible and ::markAsHidden
- [#3679] Change: Update all PEAR and emogrifier classes to the latest versions
- [#3650] Fix: Objects overwrite/delete each other's configuration arrays
- [#3677] Fix: Return-path in e-mails has additional <> around it when forceReturnPath is used
- [#3670] Fix: PEAR classes can get included twice
- [#3673] Fix: Model::existsKey returns false for null data
- [#3556] Fix: Use PATH_tslib in require once for tslib_content
- [#3550] Fix: getUid should return an integer, not a string
- [#3659] Fix: getSubpart('foo') fails for certain characters within the subpart delimiters
- [#3372] Fix: Umlauts not encoded correctly in the e-mail headers (again)
- [#3656] Fix: Don't use TYPO3_branch or compat_version
- [#3657] Fix: ObjectFactory::make needs to pass an array to call_user_func_array
- [#3641] Change: Update all copyrights to 2010
- [#3322] Fix: Return-Path needs to have <> around the e-mail address
- [#3606] Feature: Add a getter for the last login to the FE user model
- [#3562] Fix: Warning in EM: XCLASS line for PriceViewHelper is wrong
- [#3551] Fix: The configuration registry needs to make sure the configuration is loaded in the FE
- [#3537] Feature: Feature: Add tx_oelib_DataMapper::cacheModelByCombinedKeys
- [#2469] Feature: Allow additional keys for models in the mappers