@@ -1117,6 +1117,44 @@ abstract class tx_oelib_DataMapper {
 
 		return $model;
 	}
+
+	/**
+	 * Finds all records that are related to $model via the field $key.
+	 *
+	 * @param tx_oelib_Model $model
+	 *        the model to which the matches should be related
+	 * @param string $relationKey
+	 *        the key of the field in the matches that should contain the UID
+	 *        of $model
+	 * @param tx_oelib_List $ignoreList
+	 *        related records that should _not_ be returned
+	 *
+	 * @return tx_oelib_List the related models, will be empty if there are no
+	 *                       matches
+	 */
+	public function findAllByRelation(
+		tx_oelib_Model $model, $relationKey, tx_oelib_List $ignoreList = null
+	) {
+		if (!$model->hasUid()) {
+			throw new Exception('$model must have a UID.');
+		}
+		if ($relationKey == '') {
+			throw new Exception('$key must not be empty.');
+		}
+
+		$ignoreClause = '';
+		if (($ignoreList !== null) && !$ignoreList->isEmpty()) {
+			$ignoreUids = $ignoreList->getUids();
+			// deals with the case of $ignoreList having only models without UIDs
+			if ($ignoreUids != '') {
+				$ignoreClause = ' AND uid NOT IN(' . $ignoreUids . ')';
+			}
+		}
+
+		return $this->findByWhereClause(
+			$relationKey . ' = ' . $model->getUid() . $ignoreClause
+		);
+	}
 }
 
 if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/class.tx_oelib_DataMapper.php']) {
